Implement all left over chat variables